<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_links"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_links" />
    <item
        android:id="@+id/nav_modules"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_modules" />
    <item
        android:id="@+id/nav_setup"
        android:icon="@drawable/ic_setup"
        android:title="@string/nav_setup" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
